--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,20 +8,12 @@
         android:padding="16dp"
         android:background="@drawable/headerbkg"
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/aklogo"/>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Android Knowledge"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="contact@androidknowledge.com"
+            android:text="Menu"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:layout_marginBottom="16dp"/>
