--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,21 +6,21 @@
     <group
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_student_profile"
             android:icon="@drawable/baseline_person_24"
-            android:title="Home"/>
+            android:title="Profili"/>
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/nav_afatet"
             android:icon="@drawable/baseline_person_24"
-            android:title="Settings"/>
+            android:title="Afatet"/>
         <item
-            android:id="@+id/nav_share"
+            android:id="@+id/nav_kalendari"
             android:icon="@drawable/baseline_person_24"
-            android:title="Share"/>
+            android:title="Kalendari"/>
         <item
-            android:id="@+id/nav_about"
+            android:id="@+id/nav_mensa"
             android:icon="@drawable/baseline_person_24"
-            android:title="About Us"/>
+            android:title="Menzat"/>
     </group>
     <item
         android:title="">
