--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,28 +6,28 @@
     <group
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/baseline_person_24"
-            android:title="Home"/>
+            android:id="@+id/nav_student_profile"
+            android:icon="@drawable/baseline_personal_injury_24"
+            android:title="Profili"/>
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/nav_afatet"
             android:icon="@drawable/baseline_person_24"
-            android:title="Settings"/>
+            android:title="Afatet"/>
         <item
-            android:id="@+id/nav_share"
-            android:icon="@drawable/baseline_person_24"
-            android:title="Share"/>
+            android:id="@+id/nav_kalendari"
+            android:icon="@drawable/baseline_calendar_month_24"
+            android:title="Kalendari"/>
         <item
-            android:id="@+id/nav_about"
-            android:icon="@drawable/baseline_person_24"
-            android:title="About Us"/>
+            android:id="@+id/nav_mensa"
+            android:icon="@drawable/baseline_location_on_24"
+            android:title="Menzat"/>
     </group>
     <item
         android:title="">
         <menu>
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/baseline_person_24"
+                android:icon="@drawable/baseline_logout_24"
                 android:title="Logout"/>
         </menu>
     </item>
