--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,14 @@
         android:textColor="@color/white"
         android:background="@null"
         android:onClick="weeklyAction"
+        android:backgroundTint="@color/lavender"
         android:layout_gravity="center"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginBottom="18dp"
+        android:layout_marginTop="18dp">
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -27,17 +28,19 @@
             android:background="@null"
             android:textStyle="bold"
             android:onClick="previousMonthAction"
-            android:textSize="20sp"/>
+            android:backgroundTint="@color/lavender"
+            android:textSize="19sp"/>
 
         <TextView
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="Feb 2021"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:textAlignment="center"
-            android:textColor="@color/blue"/>
+            android:textColor="@color/blue"
+            android:backgroundTint="@color/lavender"/>
 
         <Button
             android:layout_width="0dp"
@@ -48,7 +51,8 @@
             android:background="@null"
             android:textStyle="bold"
             android:onClick="nextMonthAction"
-            android:textSize="20sp"/>
+            android:backgroundTint="@color/lavender"
+            android:textSize="19sp"/>
 
     </LinearLayout>
 
