--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Te dhenat personale te studentit"
+            android:text="Të dhënat personale të studentit"
             android:textColor="@color/lavender"
             android:textSize="22sp" />
 
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="Datelindja"
+                    android:text="Datëlindja"
                     android:textAllCaps="false"
                     android:textStyle="bold"
                     android:textSize="14sp" />
