--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,22 +14,24 @@
         android:backgroundTint="@color/lavender"
         android:layout_gravity="center"/>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="400sp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="18dp"
-        android:layout_marginTop="18dp">
+        android:layout_marginBottom="22dp"
+        android:layout_marginTop="22dp">
         <Button
+            android:minHeight="0dp"
+            android:minWidth="0dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="back"
+            android:drawableLeft="@drawable/baseline_arrow_back_24"
             android:textColor="@color/white"
-            android:background="@null"
+            android:backgroundTint="@color/lavender"
             android:textStyle="bold"
             android:onClick="previousMonthAction"
-            android:backgroundTint="@color/lavender"
-            android:textSize="19sp"/>
+            android:textSize="20sp"/>
+
 
         <TextView
             android:id="@+id/monthYearTV"
@@ -37,22 +39,22 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="Feb 2021"
-            android:textSize="12sp"
             android:textAlignment="center"
             android:textColor="@color/blue"
             android:backgroundTint="@color/lavender"/>
-
         <Button
+            android:minHeight="0dp"
+            android:minWidth="0dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="forward"
+            android:backgroundTint="@color/lavender"
             android:textColor="@color/white"
-            android:background="@null"
+            android:drawableRight="@drawable/baseline_arrow_forward_24"
             android:textStyle="bold"
             android:onClick="nextMonthAction"
-            android:backgroundTint="@color/lavender"
-            android:textSize="19sp"/>
+            />
+
 
     </LinearLayout>
 
