--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background"
     tools:context=".activities.WeekViewActivity">
 
     <LinearLayout
@@ -20,9 +19,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="back"
+            android:drawableLeft="@drawable/baseline_arrow_back_24"
             android:textColor="@color/white"
-            android:background="@null"
+            android:backgroundTint="@color/lavender"
             android:textStyle="bold"
             android:onClick="previousWeekAction"
             android:textSize="20sp"/>
@@ -41,12 +40,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="forward"
+            android:backgroundTint="@color/lavender"
             android:textColor="@color/white"
-            android:background="@null"
+            android:drawableRight="@drawable/baseline_arrow_forward_24"
             android:textStyle="bold"
             android:onClick="nextWeekAction"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            />
 
     </LinearLayout>
 
