added back buttons to some views

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,6 +19,16 @@
             android:layout_height="1px"
             android:layout_weight="1">
 
+            <Button
+                android:id="@+id/back_to_menu_from_profile"
+                android:layout_width="61dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/lavender"
+                android:drawableLeft="@drawable/baseline_arrow_back_24"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/profile_image_bg"
                 android:layout_width="150dp"
