--- a/app/src/main/res/layout/activity_january_period.xml
+++ b/app/src/main/res/layout/activity_january_period.xml
@@ -5,11 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JanuaryPeriod">
-   <ListView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/list">
-   </ListView>
+    tools:context=".activities.ProvimetActivity">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/exam_list">
+    </ListView>
 
 </RelativeLayout>
