--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -16,15 +16,15 @@
         android:layout_marginTop="20dp">
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/baseline_arrow_back_24"
-            android:textColor="@color/white"
             android:backgroundTint="@color/lavender"
-            android:textStyle="bold"
+            android:drawableLeft="@drawable/baseline_arrow_back_24"
             android:onClick="previousWeekAction"
-            android:textSize="20sp"/>
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/monthYearTV"
