--- a/app/src/main/res/layout/mensa_map.xml
+++ b/app/src/main/res/layout/mensa_map.xml
@@ -7,8 +7,8 @@
 
     <Button
         android:id="@+id/back_to_menu_from_menza"
-        android:layout_width="61dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
         android:backgroundTint="@color/lavender"
         android:drawableLeft="@drawable/baseline_arrow_back_24"
         android:textColor="@color/white"
