--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Kontakti:"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginTop="500dp"
         android:id="@+id/kontaktiTitull"
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="+38344430589"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:id="@+id/kontakti"
         android:layout_marginLeft="25dp"
         />
@@ -74,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Email:"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginTop="500dp"
             android:layout_marginLeft="220dp"
@@ -85,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="rektorati@uni-pr.edu"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:layout_marginLeft="220dp"
             android:id="@+id/emailKontakt"
             />
